refactor: rename Organization* services to Org* for naming consistency